<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="10dp"
	android:paddingEnd="15dp"
	android:paddingStart="15dp"
	>

	<ImageView
		android:id="@+id/currency_trend_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
		app:layout_constraintBottom_toTopOf="@+id/nominal_name_view"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<TextView
		android:id="@+id/value_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="5dp"
		android:text="@string/currency_value_test"
		android:textSize="32sp"
		app:layout_constraintBottom_toTopOf="@+id/nominal_name_view"
		app:layout_constraintEnd_toStartOf="@+id/primary_currency_view"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<TextView
		android:id="@+id/primary_currency_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/primary_currency"
		android:textSize="32sp"
		app:layout_constraintBottom_toTopOf="@+id/nominal_name_view"
		app:layout_constraintEnd_toStartOf="@+id/currency_trend_view"
		app:layout_constraintTop_toTopOf="parent"
		/>


	<TextView
		android:id="@+id/char_code_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/currency_char_code_test"
		android:textSize="32sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<TextView

		android:id="@+id/nominal_name_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:ellipsize="end"
		android:maxLines="1"
		android:text="@string/currency_nominal_name_long_test"
		android:textSize="16sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/char_code_view"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>